syntax = "proto3";

package secret_info;

message SecretRequest { }

message SecretResponse {
  string secret = 1;
}

service SecretService {
  rpc GetSecret(SecretRequest) returns (SecretResponse);
}